--- a/templates/list.html
+++ b/templates/list.html
@@ -1,1 +1,46 @@
-<html></html>
+<html>
+  <head>
+    <title>파일 리스트 정보</title>
+    <!--CSS, JS-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{url_for('static', filename='rss.css')}}"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h1>파일 리스트 정보</h1>
+      <!--app.route('/upload', methods=['POST'])-->
+      <form method="POST" action="/upload">
+        <table>
+          <thead>
+            <tr>
+              <th>파일 이름</th>
+              <th>파일 사이즈</th>
+              <th>파일 수정날짜</th>
+              <th>파일 선택</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for file in files %}
+            <tr>
+              <!--app.route('/upload', methods=['POST'])의 정보 활용-->
+              <!--return render_template("list.html", files=files) -->
+              <!--files = [(파일 이름, 파일 사이즈, 파일 수정날짜(YYYY-MM-DD HH:MM:SS))] 필요-->
+              <td>
+                <a href="{{url_for('download', file=file[0])}}">{{file[0]}}</a>
+              </td>
+              <td>{{file[1]}}</td>
+              <td>{{file[2]}}</td>
+              <td>
+                <input type="checkbox" name="files" value="{{file[0]}}" />
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </form>
+    </div>
+  </body>
+</html>
